pkl-core/src/test/files/LanguageSnippetTests/input/errors/mappingTypeCheckError1.pkl
res = new Mapping<String, String> {
  ["foo"] = 1
}
